--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "playwright": "^1.45.3",
     "postcss": "^8.4.39",
     "storybook": "^8.2.6",
+    "storybook-addon-deep-controls": "^0.6.2",
     "svelte": "^4.2.18",
     "svelte-check": "^3.8.1",
     "tailwindcss": "^3.4.4",
