--- a/package.json
+++ b/package.json
@@ -15,23 +15,25 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
-    "@storybook/addon-essentials": "^8.2.6",
-    "@storybook/addon-interactions": "^8.2.6",
-    "@storybook/addon-links": "^8.2.6",
+    "@storybook/addon-essentials": "^8.2.7",
+    "@storybook/addon-interactions": "^8.2.7",
+    "@storybook/addon-links": "^8.2.7",
     "@storybook/addon-svelte-csf": "^4.1.4",
-    "@storybook/addon-themes": "^8.2.6",
-    "@storybook/blocks": "^8.2.6",
-    "@storybook/svelte": "^8.2.6",
-    "@storybook/svelte-vite": "^8.2.6",
-    "@storybook/test": "^8.2.6",
+    "@storybook/addon-themes": "^8.2.7",
+    "@storybook/blocks": "^8.2.7",
+    "@storybook/instrumenter": "^8.2.6",
+    "@storybook/svelte": "^8.2.7",
+    "@storybook/svelte-vite": "^8.2.7",
+    "@storybook/test": "^8.2.7",
     "@storybook/test-runner": "^0.19.1",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tauri-apps/cli": "^1.6.0",
+    "@testing-library/dom": "^10.4.0",
     "@tsconfig/svelte": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "playwright": "^1.45.3",
     "postcss": "^8.4.39",
-    "storybook": "^8.2.6",
+    "storybook": "^8.2.7",
     "storybook-addon-deep-controls": "^0.6.2",
     "svelte": "^4.2.18",
     "svelte-check": "^3.8.1",
