--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@storybook/svelte-vite": "^8.2.7",
     "@storybook/test": "^8.2.7",
     "@storybook/test-runner": "^0.19.1",
+    "@storybook/types": "^8.2.7",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tauri-apps/cli": "^1.6.0",
     "@testing-library/dom": "^10.4.0",
@@ -46,6 +47,8 @@
     "vite-tsconfig-paths": "^4.3.2"
   },
   "dependencies": {
+    "@floating-ui/dom": "^1.6.8",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@xyflow/svelte": "^0.1.14"
   }
 }
