--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test-storybook": "test-storybook"
+    "test-storybook": "test-storybook --stories-json"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
